--- a/index.html
+++ b/index.html
@@ -9,35 +9,22 @@
 
   <style>
     :root {
-      --bg: #0b0c10;
-      --bg2: #0f172a;
-      --card: rgba(255, 255, 255, 0.06);
-      --card2: rgba(255, 255, 255, 0.04);
-      --border: rgba(255, 255, 255, 0.10);
-      --text: rgba(255, 255, 255, 0.92);
-      --muted: rgba(255, 255, 255, 0.68);
-      --muted2: rgba(255, 255, 255, 0.55);
-      --accent: #7c3aed;
-      --accent2: #22c55e;
-      --shadow: 0 10px 40px rgba(0, 0, 0, 0.35);
+      /* Minimal white theme (always on) */
+      --bg: #ffffff;
+      --bg2: #f8fafc;
+      --card: rgba(2, 6, 23, 0.03);
+      --card2: rgba(2, 6, 23, 0.02);
+      --border: rgba(2, 6, 23, 0.10);
+      --text: rgba(2, 6, 23, 0.92);
+      --muted: rgba(2, 6, 23, 0.64);
+      --muted2: rgba(2, 6, 23, 0.52);
+      --accent: #111827;
+      --accent2: #0f172a;
+      --shadow: 0 18px 60px rgba(2, 6, 23, 0.10);
       --radius: 14px;
       --radius2: 10px;
       --mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
       --sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial;
-    }
-
-    @media (prefers-color-scheme: light) {
-      :root {
-        --bg: #f8fafc;
-        --bg2: #eef2ff;
-        --card: rgba(0, 0, 0, 0.04);
-        --card2: rgba(0, 0, 0, 0.03);
-        --border: rgba(0, 0, 0, 0.08);
-        --text: rgba(0, 0, 0, 0.88);
-        --muted: rgba(0, 0, 0, 0.62);
-        --muted2: rgba(0, 0, 0, 0.52);
-        --shadow: 0 18px 60px rgba(2, 6, 23, 0.12);
-      }
     }
 
     * {
@@ -53,10 +40,7 @@
       margin: 0;
       font-family: var(--sans);
       color: var(--text);
-      background:
-        radial-gradient(1200px 900px at 20% -10%, rgba(124, 58, 237, 0.22), transparent 55%),
-        radial-gradient(900px 600px at 110% 10%, rgba(34, 197, 94, 0.18), transparent 55%),
-        linear-gradient(180deg, var(--bg), var(--bg2));
+      background: linear-gradient(180deg, var(--bg), var(--bg2));
     }
 
     a {
@@ -90,12 +74,15 @@
       letter-spacing: 0.2px;
     }
 
-    .brand-badge {
-      width: 36px;
-      height: 36px;
-      border-radius: 10px;
-      background: linear-gradient(135deg, rgba(124, 58, 237, 0.95), rgba(34, 197, 94, 0.95));
-      box-shadow: var(--shadow);
+    .brand-logo {
+      width: 48px;
+      height: 48px;
+      border-radius: 12px;
+      object-fit: contain;
+      background: transparent;
+      border: none;
+      box-shadow: none;
+      display: block;
     }
 
     .nav {
@@ -138,7 +125,7 @@
 
     .pill {
       border: 1px solid var(--border);
-      background: rgba(255, 255, 255, 0.03);
+      background: rgba(2, 6, 23, 0.02);
       padding: 6px 10px;
       border-radius: 999px;
       font-size: 12px;
@@ -183,7 +170,7 @@
     .btn {
       appearance: none;
       border: 1px solid var(--border);
-      background: rgba(255, 255, 255, 0.03);
+      background: rgba(2, 6, 23, 0.02);
       color: var(--text);
       padding: 10px 12px;
       border-radius: 12px;
@@ -198,8 +185,8 @@
 
     .btn:hover {
       transform: translateY(-1px);
-      background: rgba(255, 255, 255, 0.06);
-      border-color: rgba(255, 255, 255, 0.18);
+      background: rgba(2, 6, 23, 0.04);
+      border-color: rgba(2, 6, 23, 0.16);
     }
 
     .btn:active {
@@ -207,23 +194,24 @@
     }
 
     .btn-primary {
-      border-color: rgba(124, 58, 237, 0.45);
-      background: rgba(124, 58, 237, 0.18);
+      border-color: rgba(2, 6, 23, 0.20);
+      background: rgba(2, 6, 23, 0.92);
+      color: rgba(255, 255, 255, 0.96);
     }
 
     .btn-primary:hover {
-      background: rgba(124, 58, 237, 0.24);
-      border-color: rgba(124, 58, 237, 0.60);
+      background: rgba(2, 6, 23, 0.86);
+      border-color: rgba(2, 6, 23, 0.30);
     }
 
     .btn-green {
-      border-color: rgba(34, 197, 94, 0.40);
-      background: rgba(34, 197, 94, 0.16);
+      border-color: rgba(2, 6, 23, 0.16);
+      background: rgba(2, 6, 23, 0.02);
     }
 
     .btn-green:hover {
-      background: rgba(34, 197, 94, 0.22);
-      border-color: rgba(34, 197, 94, 0.56);
+      background: rgba(2, 6, 23, 0.04);
+      border-color: rgba(2, 6, 23, 0.20);
     }
 
     .btn svg {
@@ -242,7 +230,7 @@
       border: 1px solid var(--border);
       border-radius: var(--radius);
       overflow: hidden;
-      background: rgba(255, 255, 255, 0.02);
+      background: rgba(2, 6, 23, 0.01);
     }
 
     details summary {
@@ -260,8 +248,14 @@
     }
 
     .codewrap {
-      position: relative;
       padding: 12px;
+    }
+
+    .codebar {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      margin-bottom: 8px;
     }
 
     pre {
@@ -269,15 +263,9 @@
       padding: 14px;
       border-radius: var(--radius2);
       border: 1px solid var(--border);
-      background: rgba(0, 0, 0, 0.26);
+      background: rgba(2, 6, 23, 0.04);
       overflow: auto;
       box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.02);
-    }
-
-    @media (prefers-color-scheme: light) {
-      pre {
-        background: rgba(2, 6, 23, 0.04);
-      }
     }
 
     code {
@@ -289,14 +277,11 @@
     }
 
     .copy {
-      position: absolute;
-      top: 16px;
-      right: 16px;
       border-radius: 999px;
       padding: 8px 10px;
       font-size: 12px;
       border: 1px solid var(--border);
-      background: rgba(255, 255, 255, 0.04);
+      background: rgba(2, 6, 23, 0.02);
       color: var(--text);
       cursor: pointer;
       transition: transform 140ms ease, background 140ms ease;
@@ -304,7 +289,7 @@
 
     .copy:hover {
       transform: translateY(-1px);
-      background: rgba(255, 255, 255, 0.07);
+      background: rgba(2, 6, 23, 0.04);
     }
 
     .footer {
@@ -344,11 +329,11 @@
   <div class="container">
     <div class="topbar">
       <div class="brand" aria-label="nostr-zap">
-        <div class="brand-badge" aria-hidden="true"></div>
+        <img class="brand-logo" src="./assets/logo.png" width="48" height="48" alt="nostr-zap" />
         <span>nostr-zap</span>
       </div>
       <nav class="nav">
-        <a href="./README.md">Docs</a>
+        <a href="./docs.html">Docs</a>
         <span aria-hidden="true">·</span>
         <a href="#embed">Embed</a>
       </nav>
@@ -376,7 +361,7 @@
           data-relay-urls="wss://relay.nostr.band,wss://relay.damus.io,wss://nos.lol,wss://nostr.bitcoiner.social,wss://relay.nostr.wirednet.jp,wss://yabu.me">
           View demo zaps
         </button>
-        <a class="pill" href="./README.md">Read the README</a>
+        <a class="pill" href="./docs.html">Read the docs</a>
       </div>
     </header>
 
@@ -422,8 +407,10 @@
         <details>
           <summary>Copy script tag</summary>
           <div class="codewrap">
-            <button class="copy" type="button" data-copy>Copy</button>
-            <pre><code class="language-html">&lt;script src=&quot;./dist/nostr-zap.js&quot;&gt;&lt;/script&gt;</code></pre>
+            <div class="codebar">
+              <button class="copy" type="button" data-copy>Copy</button>
+            </div>
+            <pre><code class="language-html">&lt;script src=&quot;https://zap.nostr.buzz/dist/nostr-zap.js&quot;&gt;&lt;/script&gt;</code></pre>
           </div>
         </details>
       </section>
@@ -435,7 +422,9 @@
         <details>
           <summary>Show HTML</summary>
           <div class="codewrap">
-            <button class="copy" type="button" data-copy>Copy</button>
+            <div class="codebar">
+              <button class="copy" type="button" data-copy>Copy</button>
+            </div>
             <pre><code class="language-html">&lt;div style=&quot;display:inline-flex;gap:8px&quot;&gt;
   &lt;button data-npub=&quot;npub1...&quot;
     data-relays=&quot;wss://relay.nostr.band,wss://relay.damus.io&quot;&gt;
@@ -479,7 +468,7 @@
       <div>
         <span>Demo page</span>
         <span aria-hidden="true"> · </span>
-        <a href="./README.md">Documentation</a>
+        <a href="./docs.html">Documentation</a>
       </div>
       <div>
         <span style="color: var(--muted);">Built bundle:</span>
@@ -488,7 +477,7 @@
     </footer>
   </div>
 
-  <script src="./dist/nostr-zap.js"></script>
+  <script src="https://zap.nostr.buzz/dist/nostr-zap.js"></script>
   <script>
     // Copy helpers for all blocks that opt-in via [data-copy]
     document.querySelectorAll("[data-copy]").forEach((btn) => {
