feat: Update relay URLs for improved connectivity and performance

--- a/docs.html
+++ b/docs.html
@@ -363,7 +363,7 @@
             </div>
             <pre><code class="language-html">&lt;button
   data-nzv-id=&quot;npub1...&quot;
-  data-relay-urls=&quot;wss://relay.nostr.band,wss://relay.damus.io,wss://nos.lol&quot;
+  data-relay-urls=&quot;wss://relay.damus.io,wss://relay.primal.net,wss://nos.lol&quot;
   data-title=&quot;&quot;
   data-zap-color-mode=&quot;true&quot;&gt;
   View zaps
