--- a/tutorial-test.html
+++ b/tutorial-test.html
@@ -182,7 +182,7 @@
       <div class="row">
         <button
           data-npub="npub1tapj48eekk8lzvhupfxg4ugdgthaj97cqahk3wml97g76l20dfqspmpjyp"
-          data-relays="wss://relay.nostr.band,wss://relay.damus.io,wss://nos.lol">
+          data-relays="wss://relay.damus.io,wss://relay.primal.net,wss://nos.lol">
           Zap
         </button>
       </div>
