--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
       <div class="row">
         <button class="btn btn-primary" data-title=""
           data-nzv-id="npub1tapj48eekk8lzvhupfxg4ugdgthaj97cqahk3wml97g76l20dfqspmpjyp" data-zap-color-mode="true"
-          data-relay-urls="wss://relay.nostr.band,wss://relay.damus.io,wss://nos.lol,wss://nostr.bitcoiner.social,wss://relay.nostr.wirednet.jp,wss://yabu.me">
+          data-relay-urls="wss://relay.damus.io,wss://relay.primal.net,wss://nos.lol,wss://nostr-pub.wellorder.net,wss://relay.snort.social,wss://relay.angor.io,wss://nostr.wine,wss://eden.nostr.land,wss://nostr.bitcoiner.social,wss://nostr.mom,wss://nostr.land,wss://nostr.oxtr.dev,wss://purplepag.es,wss://offchain.pub,wss://premium.primal.net,wss://relay.mostr.pub,wss://puravida.nostr.land,wss://pyramid.fiatjaf.com,wss://atlas.nostr.land,wss://relay.nostrplebs.com,wss://hist.nostr.land,wss://no.str.cr,wss://bitcoiner.social,wss://relay.bitcoinpark.com,wss://relay.nos.social,wss://nostr.einundzwanzig.space,wss://relay.nostr.com.au,wss://nostr-01.yakihonne.com,wss://relay.noswhere.com,wss://theforest.nostr1.com,wss://yabu.me,wss://wot.nostr.party,wss://nostr-pub.semisol.dev">
           View demo zaps
         </button>
         <a class="pill" href="./docs.html">Read the docs</a>
@@ -420,12 +420,12 @@
         <p>Two buttons side-by-side: zap dialog + zap viewer for the same profile.</p>
         <div class="row">
           <button class="btn btn-green" data-npub="npub1tapj48eekk8lzvhupfxg4ugdgthaj97cqahk3wml97g76l20dfqspmpjyp"
-            data-relays="wss://relay.nostr.band,wss://relay.damus.io,wss://nos.lol,wss://nostr.bitcoiner.social,wss://relay.nostr.wirednet.jp,wss://yabu.me">
+            data-relays="wss://relay.damus.io,wss://relay.primal.net,wss://nos.lol,wss://nostr-pub.wellorder.net,wss://relay.snort.social,wss://relay.angor.io,wss://nostr.wine,wss://eden.nostr.land,wss://nostr.bitcoiner.social,wss://nostr.mom,wss://nostr.land,wss://nostr.oxtr.dev,wss://purplepag.es,wss://offchain.pub,wss://premium.primal.net,wss://relay.mostr.pub,wss://puravida.nostr.land,wss://pyramid.fiatjaf.com,wss://atlas.nostr.land,wss://relay.nostrplebs.com,wss://hist.nostr.land,wss://no.str.cr,wss://bitcoiner.social,wss://relay.bitcoinpark.com,wss://relay.nos.social,wss://nostr.einundzwanzig.space,wss://relay.nostr.com.au,wss://nostr-01.yakihonne.com,wss://relay.noswhere.com,wss://theforest.nostr1.com,wss://yabu.me,wss://wot.nostr.party,wss://nostr-pub.semisol.dev">
             Zap
           </button>
           <button class="btn" data-title=""
             data-nzv-id="npub1tapj48eekk8lzvhupfxg4ugdgthaj97cqahk3wml97g76l20dfqspmpjyp" data-zap-color-mode="true"
-            data-relay-urls="wss://relay.nostr.band,wss://relay.damus.io,wss://nos.lol,wss://nostr.bitcoiner.social,wss://relay.nostr.wirednet.jp,wss://yabu.me">
+            data-relay-urls="wss://relay.damus.io,wss://relay.primal.net,wss://nos.lol,wss://nostr-pub.wellorder.net,wss://relay.snort.social,wss://relay.angor.io,wss://nostr.wine,wss://eden.nostr.land,wss://nostr.bitcoiner.social,wss://nostr.mom,wss://nostr.land,wss://nostr.oxtr.dev,wss://purplepag.es,wss://offchain.pub,wss://premium.primal.net,wss://relay.mostr.pub,wss://puravida.nostr.land,wss://pyramid.fiatjaf.com,wss://atlas.nostr.land,wss://relay.nostrplebs.com,wss://hist.nostr.land,wss://no.str.cr,wss://bitcoiner.social,wss://relay.bitcoinpark.com,wss://relay.nos.social,wss://nostr.einundzwanzig.space,wss://relay.nostr.com.au,wss://nostr-01.yakihonne.com,wss://relay.noswhere.com,wss://theforest.nostr1.com,wss://yabu.me,wss://wot.nostr.party,wss://nostr-pub.semisol.dev">
             View
           </button>
           <span class="theme-controls" data-theme-row>
@@ -446,12 +446,12 @@
         <div class="row">
           <button class="btn btn-green" data-npub="npub1tapj48eekk8lzvhupfxg4ugdgthaj97cqahk3wml97g76l20dfqspmpjyp"
             data-note-id="nevent1qqs2feju0cx3mu2nm6fdq6s4lpa390v0w22ngsh7efnxe40exz2ylkcc5hm0t"
-            data-relays="wss://relay.nostr.band,wss://relay.damus.io,wss://nos.lol,wss://nostr.bitcoiner.social,wss://relay.nostr.wirednet.jp,wss://yabu.me">
+            data-relays="wss://relay.damus.io,wss://relay.primal.net,wss://nos.lol,wss://nostr-pub.wellorder.net,wss://relay.snort.social,wss://relay.angor.io,wss://nostr.wine,wss://eden.nostr.land,wss://nostr.bitcoiner.social,wss://nostr.mom,wss://nostr.land,wss://nostr.oxtr.dev,wss://purplepag.es,wss://offchain.pub,wss://premium.primal.net,wss://relay.mostr.pub,wss://puravida.nostr.land,wss://pyramid.fiatjaf.com,wss://atlas.nostr.land,wss://relay.nostrplebs.com,wss://hist.nostr.land,wss://no.str.cr,wss://bitcoiner.social,wss://relay.bitcoinpark.com,wss://relay.nos.social,wss://nostr.einundzwanzig.space,wss://relay.nostr.com.au,wss://nostr-01.yakihonne.com,wss://relay.noswhere.com,wss://theforest.nostr1.com,wss://yabu.me,wss://wot.nostr.party,wss://nostr-pub.semisol.dev">
             Zap
           </button>
           <button class="btn" data-title="Milad's Post"
             data-nzv-id="nevent1qqs2feju0cx3mu2nm6fdq6s4lpa390v0w22ngsh7efnxe40exz2ylkcc5hm0t" data-zap-color-mode="true"
-            data-relay-urls="wss://relay.nostr.band,wss://relay.damus.io,wss://nos.lol,wss://nostr.bitcoiner.social,wss://relay.nostr.wirednet.jp,wss://yabu.me">
+            data-relay-urls="wss://relay.damus.io,wss://relay.primal.net,wss://nos.lol,wss://nostr-pub.wellorder.net,wss://relay.snort.social,wss://relay.angor.io,wss://nostr.wine,wss://eden.nostr.land,wss://nostr.bitcoiner.social,wss://nostr.mom,wss://nostr.land,wss://nostr.oxtr.dev,wss://purplepag.es,wss://offchain.pub,wss://premium.primal.net,wss://relay.mostr.pub,wss://puravida.nostr.land,wss://pyramid.fiatjaf.com,wss://atlas.nostr.land,wss://relay.nostrplebs.com,wss://hist.nostr.land,wss://no.str.cr,wss://bitcoiner.social,wss://relay.bitcoinpark.com,wss://relay.nos.social,wss://nostr.einundzwanzig.space,wss://relay.nostr.com.au,wss://nostr-01.yakihonne.com,wss://relay.noswhere.com,wss://theforest.nostr1.com,wss://yabu.me,wss://wot.nostr.party,wss://nostr-pub.semisol.dev">
             View
           </button>
           <span class="theme-controls" data-theme-row>
@@ -493,12 +493,12 @@
             </div>
             <pre><code class="language-html">&lt;div style=&quot;display:inline-flex;gap:8px&quot;&gt;
   &lt;button data-npub=&quot;npub1...&quot;
-    data-relays=&quot;wss://relay.nostr.band,wss://relay.damus.io&quot;&gt;
+    data-relays=&quot;wss://relay.damus.io,wss://relay.primal.net,wss://nos.lol&quot;&gt;
     Zap
   &lt;/button&gt;
   &lt;button data-nzv-id=&quot;npub1...&quot;
     data-zap-color-mode=&quot;true&quot;
-    data-relay-urls=&quot;wss://relay.nostr.band,wss://relay.damus.io&quot;&gt;
+    data-relay-urls=&quot;wss://relay.damus.io,wss://relay.primal.net,wss://nos.lol&quot;&gt;
     View
   &lt;/button&gt;
 &lt;/div&gt;</code></pre>
@@ -510,7 +510,7 @@
         <div class="row">
           <button class="btn btn-green"
             data-npub="npub1tapj48eekk8lzvhupfxg4ugdgthaj97cqahk3wml97g76l20dfqspmpjyp"
-            data-relays="wss://relay.nostr.band,wss://relay.damus.io,wss://nos.lol,wss://nostr.bitcoiner.social,wss://relay.nostr.wirednet.jp,wss://yabu.me">
+            data-relays="wss://relay.damus.io,wss://relay.primal.net,wss://nos.lol,wss://nostr-pub.wellorder.net,wss://relay.snort.social,wss://relay.angor.io,wss://nostr.wine,wss://eden.nostr.land,wss://nostr.bitcoiner.social,wss://nostr.mom,wss://nostr.land,wss://nostr.oxtr.dev,wss://purplepag.es,wss://offchain.pub,wss://premium.primal.net,wss://relay.mostr.pub,wss://puravida.nostr.land,wss://pyramid.fiatjaf.com,wss://atlas.nostr.land,wss://relay.nostrplebs.com,wss://hist.nostr.land,wss://no.str.cr,wss://bitcoiner.social,wss://relay.bitcoinpark.com,wss://relay.nos.social,wss://nostr.einundzwanzig.space,wss://relay.nostr.com.au,wss://nostr-01.yakihonne.com,wss://relay.noswhere.com,wss://theforest.nostr1.com,wss://yabu.me,wss://wot.nostr.party,wss://nostr-pub.semisol.dev">
             <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18" fill="currentColor">
               <path d="m422-232 207-248H469l29-227-185 267h139l-30 208ZM320-80l40-280H160l360-520h80l-40 320h240L400-80h-80Zm151-390Z" />
             </svg>
@@ -518,7 +518,7 @@
           </button>
           <button class="btn" data-title="" data-nzv-id="npub1tapj48eekk8lzvhupfxg4ugdgthaj97cqahk3wml97g76l20dfqspmpjyp"
             data-zap-color-mode="true"
-            data-relay-urls="wss://relay.nostr.band,wss://relay.damus.io,wss://nos.lol,wss://nostr.bitcoiner.social,wss://relay.nostr.wirednet.jp,wss://yabu.me">
+            data-relay-urls="wss://relay.damus.io,wss://relay.primal.net,wss://nos.lol,wss://nostr-pub.wellorder.net,wss://relay.snort.social,wss://relay.angor.io,wss://nostr.wine,wss://eden.nostr.land,wss://nostr.bitcoiner.social,wss://nostr.mom,wss://nostr.land,wss://nostr.oxtr.dev,wss://purplepag.es,wss://offchain.pub,wss://premium.primal.net,wss://relay.mostr.pub,wss://puravida.nostr.land,wss://pyramid.fiatjaf.com,wss://atlas.nostr.land,wss://relay.nostrplebs.com,wss://hist.nostr.land,wss://no.str.cr,wss://bitcoiner.social,wss://relay.bitcoinpark.com,wss://relay.nos.social,wss://nostr.einundzwanzig.space,wss://relay.nostr.com.au,wss://nostr-01.yakihonne.com,wss://relay.noswhere.com,wss://theforest.nostr1.com,wss://yabu.me,wss://wot.nostr.party,wss://nostr-pub.semisol.dev">
             <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18" fill="currentColor">
               <path d="M320-280q17 0 28.5-11.5T360-320q0-17-11.5-28.5T320-360q-17 0-28.5 11.5T280-320q0 17 11.5 28.5T320-280Zm0-160q17 0 28.5-11.5T360-480q0-17-11.5-28.5T320-520q-17 0-28.5 11.5T280-480q0 17 11.5 28.5T320-440Zm0-160q17 0 28.5-11.5T360-640q0-17-11.5-28.5T320-680q-17 0-28.5 11.5T280-640q0 17 11.5 28.5T320-600Zm120 320h240v-80H440v80Zm0-160h240v-80H440v80Zm0-160h240v-80H440v80ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z" />
             </svg>
