--- a/docs.html
+++ b/docs.html
@@ -321,6 +321,145 @@ await window.nostrZap.zapInit({
 window.nostrZap.zapInitTargets();</code></pre>
         </div>
       </div>
+
+      <div class="pt-8 mt-8 border-t border-slate-100">
+        <h3 class="text-lg font-bold text-slate-900 mb-4 flex items-center gap-2">
+          <span class="text-xl">🔒</span> Zapwall (paywalled content)
+        </h3>
+
+        <p class="text-slate-600 mb-6 leading-relaxed">
+          Zapwall lets you gate content per-item and unlock it after a successful zap.
+          It supports two modes:
+          <strong class="text-slate-900">blur mode</strong> (easy, not secret) and
+          <strong class="text-slate-900">encrypted payload mode</strong> (no plaintext shipped in HTML).
+        </p>
+
+        <div class="bg-amber-50 rounded-xl p-4 border border-amber-200 text-sm text-amber-900 leading-relaxed mb-6">
+          <strong>Important security note:</strong>
+          With a single static HTML file and <em>no external key delivery</em>, you cannot automatically give a secret only to payers.
+          Encrypted mode is secure only if the decryption key is provided via an external secure channel (server, Nostr DM bot, manual delivery, etc.).
+        </div>
+
+        <h4 class="text-base font-bold text-slate-900 mb-3">1) Quick start (blur mode)</h4>
+        <p class="text-slate-600 mb-4 leading-relaxed">
+          In blur mode, the content is present in HTML but visually gated until a zap succeeds.
+          This is good for UX, but it is not “secret” (view-source can still show it).
+        </p>
+        <div class="relative group mb-8">
+          <div class="absolute right-3 top-3 opacity-0 group-hover:opacity-100 transition-opacity">
+            <button class="px-3 py-1.5 text-xs font-medium text-white bg-white/10 hover:bg-white/20 rounded-lg backdrop-blur-sm border border-white/10 transition-colors" data-copy>
+              Copy
+            </button>
+          </div>
+          <pre class="bg-slate-900 text-slate-50 p-5 rounded-xl overflow-x-auto text-sm font-mono leading-relaxed"><code>&lt;section
+  data-zapwall
+  data-zapwall-id=&quot;post-123&quot;
+  data-title=&quot;Premium post&quot;
+  data-amount=&quot;21&quot;
+  data-npub=&quot;npub1...&quot;
+  data-relays=&quot;wss://relay.damus.io,wss://relay.primal.net,wss://nos.lol&quot;&gt;
+
+  &lt;div data-zapwall-content&gt;
+    &lt;h2&gt;Premium content&lt;/h2&gt;
+    &lt;p&gt;This becomes visible after a successful zap.&lt;/p&gt;
+  &lt;/div&gt;
+&lt;/section&gt;</code></pre>
+        </div>
+
+        <h4 class="text-base font-bold text-slate-900 mb-3">2) Secure mode (encrypted payload, no plaintext in HTML)</h4>
+        <p class="text-slate-600 mb-4 leading-relaxed">
+          In encrypted mode, you do <strong class="text-slate-900">not</strong> ship the plaintext in the DOM.
+          Instead you ship an encrypted payload and decrypt it only after:
+          (a) the zap is successful, and (b) a decryption key is provided.
+        </p>
+
+        <div class="bg-slate-50 rounded-xl p-4 border border-slate-100 text-sm text-slate-700 leading-relaxed mb-6">
+          <strong class="text-slate-900">Payload format</strong> (embedded as JSON):
+          <ul class="mt-2 space-y-2">
+            <li><code class="font-mono text-xs px-1.5 py-0.5 bg-white border border-slate-200 rounded">v</code>: version (currently <code class="font-mono text-xs px-1.5 py-0.5 bg-white border border-slate-200 rounded">1</code>)</li>
+            <li><code class="font-mono text-xs px-1.5 py-0.5 bg-white border border-slate-200 rounded">alg</code>: <code class="font-mono text-xs px-1.5 py-0.5 bg-white border border-slate-200 rounded">AES-256-GCM</code></li>
+            <li><code class="font-mono text-xs px-1.5 py-0.5 bg-white border border-slate-200 rounded">iv</code>: base64 IV (12+ bytes)</li>
+            <li><code class="font-mono text-xs px-1.5 py-0.5 bg-white border border-slate-200 rounded">ct</code>: base64 ciphertext</li>
+            <li><code class="font-mono text-xs px-1.5 py-0.5 bg-white border border-slate-200 rounded">format</code>: <code class="font-mono text-xs px-1.5 py-0.5 bg-white border border-slate-200 rounded">html</code> or <code class="font-mono text-xs px-1.5 py-0.5 bg-white border border-slate-200 rounded">text</code></li>
+            <li><code class="font-mono text-xs px-1.5 py-0.5 bg-white border border-slate-200 rounded">keyHint</code> (optional): a human-friendly hint shown in the key prompt</li>
+          </ul>
+        </div>
+
+        <div class="relative group mb-8">
+          <div class="absolute right-3 top-3 opacity-0 group-hover:opacity-100 transition-opacity">
+            <button class="px-3 py-1.5 text-xs font-medium text-white bg-white/10 hover:bg-white/20 rounded-lg backdrop-blur-sm border border-white/10 transition-colors" data-copy>
+              Copy
+            </button>
+          </div>
+          <pre class="bg-slate-900 text-slate-50 p-5 rounded-xl overflow-x-auto text-sm font-mono leading-relaxed"><code>&lt;section
+  data-zapwall
+  data-zapwall-id=&quot;post-locked-1&quot;
+  data-title=&quot;Premium post&quot;
+  data-amount=&quot;21&quot;
+  data-npub=&quot;npub1...&quot;
+  data-relays=&quot;wss://relay.damus.io,wss://relay.primal.net,wss://nos.lol&quot;
+  data-zapwall-key-label=&quot;Enter your key&quot;&gt;
+
+  &lt;!-- empty container (plaintext is NOT present in HTML) --&gt;
+  &lt;div data-zapwall-content&gt;&lt;/div&gt;
+
+  &lt;!-- encrypted payload JSON --&gt;
+  &lt;script type=&quot;application/json&quot; data-zapwall-payload&gt;
+    {&quot;v&quot;:1,&quot;alg&quot;:&quot;AES-256-GCM&quot;,&quot;iv&quot;:&quot;...&quot;,&quot;ct&quot;:&quot;...&quot;,&quot;format&quot;:&quot;html&quot;,&quot;keyHint&quot;:&quot;provided after payment&quot;}
+  &lt;/script&gt;
+&lt;/section&gt;</code></pre>
+        </div>
+
+        <h4 class="text-base font-bold text-slate-900 mb-3">3) Providing the decryption key</h4>
+        <p class="text-slate-600 mb-4 leading-relaxed">
+          For encrypted mode, the library needs a 32-byte key (AES-256). You can provide it in either:
+          <strong class="text-slate-900">64-hex</strong> or <strong class="text-slate-900">base64</strong>.
+        </p>
+
+        <p class="text-slate-600 mb-4 leading-relaxed">
+          Recommended approach: implement a key provider function. The provider can check whatever you want (zap receipt, DM, etc.)
+          and return the key.
+        </p>
+
+        <div class="relative group mb-8">
+          <div class="absolute right-3 top-3 opacity-0 group-hover:opacity-100 transition-opacity">
+            <button class="px-3 py-1.5 text-xs font-medium text-white bg-white/10 hover:bg-white/20 rounded-lg backdrop-blur-sm border border-white/10 transition-colors" data-copy>
+              Copy
+            </button>
+          </div>
+          <pre class="bg-slate-900 text-slate-50 p-5 rounded-xl overflow-x-auto text-sm font-mono leading-relaxed"><code>// Option A: global provider
+window.nostrZapZapwallKeyProvider = async ({ wall, zap }) =&gt; {
+  // wall.key / wall.amountSats / wall.noteId / wall.naddr / wall.npub ...
+  // zap.invoice / zap.amountSats / zap.preimage (wallet-dependent) ...
+  // Return 32-byte key as 64-hex or base64.
+  return null;
+};
+
+// Option B: API (if you import the module)
+// window.nostrZap.setZapWallKeyProvider(async ({ wall, zap }) =&gt; "...key...");</code></pre>
+        </div>
+
+        <h4 class="text-base font-bold text-slate-900 mb-3">4) Encrypting content offline</h4>
+        <p class="text-slate-600 mb-4 leading-relaxed">
+          This repo includes an offline helper script to generate the encrypted payload.
+          It outputs <strong class="text-slate-900">payload</strong> + a random <strong class="text-slate-900">key</strong>.
+          You must deliver the key to paying users via a secure channel.
+        </p>
+
+        <div class="relative group">
+          <div class="absolute right-3 top-3 opacity-0 group-hover:opacity-100 transition-opacity">
+            <button class="px-3 py-1.5 text-xs font-medium text-white bg-white/10 hover:bg-white/20 rounded-lg backdrop-blur-sm border border-white/10 transition-colors" data-copy>
+              Copy
+            </button>
+          </div>
+          <pre class="bg-slate-900 text-slate-50 p-5 rounded-xl overflow-x-auto text-sm font-mono leading-relaxed"><code># Example (run locally)
+node scripts/zapwall-encrypt.mjs ./premium.html --format html --key-hint "Delivered after payment"
+
+# Output JSON contains:
+# - payload: { v, alg, iv, ct, format, keyHint? }
+# - key: 64-hex AES key (keep this secret!)</code></pre>
+        </div>
+      </div>
     </section>
 
     <!-- Relays -->
